[package]
name = "cykusz_rust64h"
version = "0.1.0"
authors = ["Rafal Mielniczuk <rafal.mielniczuk2@gmail.com>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
rlibc = "*"
linked_list_allocator = "*"
spin = "*"

[dependencies.x86]
version = "0.8.*"

[dependencies.bitflags]
version = "*"

[dependencies.lazy_static]
version = "*"
features = ["spin_no_std"]
