[package]
authors = ["Philipp Oppermann <dev@phil-opp.com>"]
name = "hole_list_allocator"
version = "0.1.0"

[dependencies]
spin = "*"

[dependencies.linked_list_allocator]
git = "https://github.com/rafalmiel/linked-list-allocator.git"

[dependencies.lazy_static]
version = "*"
features = ["spin_no_std"]
